fix configuration issue with taskservice, musicTrackService and taskController test classes